--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 </head>
 <body>
     <header>
-        logo.png
-        <div class="title">
-            <h1>PRECISION LAYERED LOGIC</h1>
-            <p>Engineered Additive Solutions</p>
-        </div>
-    </header>
+    logo.png
+    <div class="title">
+        <h1>PRECISION LAYERED LOGIC</h1>
+        <p>Engineered Additive Solutions</p>
+    </div>
+</header>
 
     <section>
         <h2>About Us</h2>
@@ -74,8 +74,8 @@
 
     <section>
         <h2>Contact Info</h2>
-        <p>Email: contact@precisionlayeredlogic.com</p>
-        <p>Phone: (555) 123-4567</p>
+        <p>Email: precisionlayeredlogic@outlook.com</p>
+        <p></p>
     </section>
 
     <footer>
@@ -83,4 +83,5 @@
     </footer>
 </body>
 </html>
+
 
