--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
     <header>
     logo.png
-    <div class="title">
+    <div class="logo.png">
         <h1>PRECISION LAYERED LOGIC</h1>
         <p>Engineered Additive Solutions</p>
     </div>
@@ -83,5 +83,6 @@
     </footer>
 </body>
 </html>
+
 
 
