--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 </head>
 <body>
     <header>
-    logo.png
-    <div class="logo.png">
+        logo.png
+    <div class="title">
         <h1>PRECISION LAYERED LOGIC</h1>
-        <p>Engineered Additive Solutions</p>
+        <p>Engineered Adaptive Solutions</p>
     </div>
 </header>
 
@@ -69,7 +69,7 @@
 
     <section>
         <h2>Product Focus</h2>
-        <p>We specialize in <strong>3D printed parts</strong> across a wide range of applications. Our product offerings include car parts, tools, gun accessories, and many other custom and precision-engineered components. With a focus on additive manufacturing, we deliver versatile solutions tailored to meet diverse industry needs and customer requirements.</p>
+        <p>We specialize in <strong>3D printed parts</strong> across a wide range of applications. Our product offerings include car parts, tools, gun accessories, and many other custom and precision-engineered components. With a focus on adaptive solutions, we deliver versatile solutions tailored to meet diverse industry needs and customer requirements.</p>
     </section>
 
     <section>
@@ -83,6 +83,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
