--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <header>
-        logo.png
+        logo-new.png
     <div class="title">
         <h1>PRECISION LAYERED LOGIC</h1>
         <p>Engineered Adaptive Solutions</p>
@@ -83,6 +83,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
