--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Precision Layered Logic</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -17,14 +17,15 @@
             padding: 20px;
             display: flex;
             align-items: center;
-            justify-content: space-between;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         header img {
             height: 60px;
+            margin-right: 20px;
         }
         header .title {
-            margin-left: 20px;
+            display: flex;
+            flex-direction: column;
         }
         header .title h1 {
             margin: 0;
@@ -55,12 +56,12 @@
 </head>
 <body>
     <header>
-        https://github.com/kshaw6491/PrecisionLayeredLogic/blob/main/logo-fixed.jpg
-    <div class="title">
-        <h1>PRECISION LAYERED LOGIC</h1>
-        <p>Engineered Adaptive Solutions</p>
-    </div>
-</header>
+        https://raw.githubusercontent.com/kshaw6491/PrecisionLayeredLogic/main/logo.png
+        <div class="title">
+            <h1>PRECISION LAYERED LOGIC</h1>
+            <p>Engineered Additive Solutions</p>
+        </div>
+    </header>
 
     <section>
         <h2>About Us</h2>
@@ -69,13 +70,13 @@
 
     <section>
         <h2>Product Focus</h2>
-        <p>We specialize in <strong>3D printed parts</strong> across a wide range of applications. Our product offerings include car parts, tools, gun accessories, and many other custom and precision-engineered components. With a focus on adaptive solutions, we deliver versatile solutions tailored to meet diverse industry needs and customer requirements.</p>
+        <p>We specialize in <strong>3D printed parts</strong> across a wide range of applications. Our product offerings include car parts, tools, gun accessories, and many other custom and precision-engineered components. With a focus on additive manufacturing, we deliver versatile solutions tailored to meet diverse industry needs and customer requirements.</p>
     </section>
 
     <section>
         <h2>Contact Info</h2>
-        <p>Email: precisionlayeredlogic@outlook.com</p>
-        <p></p>
+        <p>Email: contact@precisionlayeredlogic.com</p>
+        <p>Phone: (555) 123-4567</p>
     </section>
 
     <footer>
@@ -83,13 +84,3 @@
     </footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
