--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Precision Layered Logic</title>
@@ -56,7 +55,7 @@
 </head>
 <body>
     <header>
-        https://raw.githubusercontent.com/kshaw6491/PrecisionLayeredLogic/main/logo.png
+        logo-fixed.png
         <div class="title">
             <h1>PRECISION LAYERED LOGIC</h1>
             <p>Engineered Additive Solutions</p>
@@ -65,7 +64,7 @@
 
     <section>
         <h2>About Us</h2>
-        <p>Precision Layered Logic specializes in additive manufacturing solutions with a focus on precision engineering and technology. We are committed to delivering high-quality, innovative products that meet the evolving needs of our customers.</p>
+        <p>Precision Layered Logic specializes in manufacturing solutions with a focus on precision engineering and technology. We are committed to delivering high-quality, innovative products that meet the evolving needs of our customers.</p>
     </section>
 
     <section>
@@ -76,7 +75,7 @@
     <section>
         <h2>Contact Info</h2>
         <p>Email: contact@precisionlayeredlogic.com</p>
-        <p>Phone: (555) 123-4567</p>
+        <p></p>
     </section>
 
     <footer>
@@ -84,3 +83,4 @@
     </footer>
 </body>
 </html>
+
