--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <header>
-        https://raw.githubusercontent.com/kshaw6491/PrecisionLayeredLogic/main/logo.png
+        logo-fixed.jpg
         <div class="title">
             <h1>PRECISION LAYERED LOGIC</h1>
             <p>Engineered Additive Solutions</p>
@@ -76,11 +76,11 @@
     <section>
         <h2>Contact Info</h2>
         <p>Email: contact@precisionlayeredlogic.com</p>
-        <p>Phone: (555) 123-4567</p>
+        
     </section>
 
     <footer>
-        &copy; 2024 Precision Layered Logic. All rights reserved.
+        &copy; 2025 Precision Layered Logic. All rights reserved.
     </footer>
 </body>
 </html>
@@ -160,4 +160,5 @@ You sent
         &copy; 2024 Precision Layered Logic. All rights reserved.
     </footer>
 </body>
+
 </html>
