--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 </head>
 <body>
     <header>
+        logo-fixed.jpg
         <div class="title">
             <h1>PRECISION LAYERED LOGIC</h1>
             <p>Engineered 3D Printed Accessories</p>
@@ -72,4 +73,5 @@
         &copy; 2025 Precision Layered Logic. All rights reserved.
     </footer>
 </body>
+
 </html>
