Update index.html with new content

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Precision Layered Logic</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Custom 3D printed accessories for cars, tools, gun safes, and more. Precision Layered Logic — engineered solutions tailored to you.">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -51,7 +52,8 @@
     </style>
 </head>
 <body>
-                                                       <header>
+    <header>
+        <img src="fixed-logo.jpg" alt="Precision Layered Logic Logo" style="height: 60px; margin-right: 20px;">
         <div class="title">
             <h1>PRECISION LAYERED LOGIC</h1>
             <p>Engineered 3D Printed Accessories</p>
@@ -60,7 +62,9 @@
 
     <section>
         <h2>About Us</h2>
-        <p>Precision Layered Logic is a small, hands-on operation focused on 3D printed accessories. We design and produce custom parts for cars, tools, guns, gun safes, and a wide range of other 3D printed needs. Our goal is to deliver reliable, practical solutions with attention to detail and continuous improvement.</p>
+        <p>
+            Precision Layered Logic is a small, hands-on operation focused on 3D printed accessories. We design and produce custom parts for cars, tools, guns, gun safes, and a wide range of other 3D printed products tailored to your needs. Our mission is to deliver precise, durable, and functional solutions through innovative engineering and quality 3D printing.
+        </p>
     </section>
 
     <section>
@@ -72,8 +76,4 @@
         &copy; 2025 Precision Layered Logic. All rights reserved.
     </footer>
 </body>
-
 </html>
-
-
-
