--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </head>
 <body>
     <header>
-        <img src="fixed-logo.jpg" alt="Precision Layered Logic Logo" style="height: 60px; margin-right: 20px;">
+        <img src="logo-fixed.jpg" alt="Precision Layered Logic Logo" style="height: 60px; margin-right: 20px;">
         <div class="title">
             <h1>PRECISION LAYERED LOGIC</h1>
             <p>Engineered 3D Printed Accessories</p>
