--- a/index.html
+++ b/index.html
@@ -41,6 +41,53 @@
         section h2 {
             color: #007BFF;
         }
+        .products-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 24px;
+            justify-content: flex-start;
+        }
+        .product-card {
+            background: #fff;
+            padding: 16px;
+            border-radius: 8px;
+            box-shadow: 0 1px 4px rgba(0,0,0,0.06);
+            width: 220px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .product-card img {
+            width: 100%;
+            height: 140px;
+            object-fit: cover;
+            border-radius: 6px;
+            background: #e0e0e0;
+        }
+        .product-card h3 {
+            margin: 12px 0 4px;
+            font-size: 18px;
+        }
+        .product-card p {
+            margin-bottom: 8px;
+            font-size: 14px;
+            color: #555;
+            text-align: center;
+        }
+        .product-card strong {
+            color: #007BFF;
+            font-size: 16px;
+            margin-bottom: 8px;
+        }
+        @media (max-width: 600px) {
+            .products-list {
+                flex-direction: column;
+                align-items: center;
+            }
+            .product-card {
+                width: 90vw;
+            }
+        }
         footer {
             background-color: #ffffff;
             text-align: center;
@@ -53,7 +100,7 @@
 </head>
 <body>
     <header>
-        <img src="logo-fixed.jpg" alt="Precision Layered Logic Logo" style="height: 60px; margin-right: 20px;">
+        <img src="logo-fixed.jpg" alt="Precision Layered Logic Logo" style="height: 240px; margin-right: 20px;">
         <div class="title">
             <h1>PRECISION LAYERED LOGIC</h1>
             <p>Engineered 3D Printed Accessories</p>
@@ -65,6 +112,30 @@
         <p>
             Precision Layered Logic is a small, hands-on operation focused on 3D printed accessories. We design and produce custom parts for cars, tools, guns, gun safes, and a wide range of other 3D printed products tailored to your needs. Our mission is to deliver precise, durable, and functional solutions through innovative engineering and quality 3D printing.
         </p>
+    </section>
+
+    <section>
+        <h2>Our Products</h2>
+        <div class="products-list">
+            <div class="product-card">
+                <img src="images/placeholder1.jpg" alt="Product 1 Placeholder">
+                <h3>Product Name 1</h3>
+                <p>Short description of product 1 goes here.</p>
+                <strong>$0.00</strong>
+            </div>
+            <div class="product-card">
+                <img src="images/placeholder2.jpg" alt="Product 2 Placeholder">
+                <h3>Product Name 2</h3>
+                <p>Short description of product 2 goes here.</p>
+                <strong>$0.00</strong>
+            </div>
+            <div class="product-card">
+                <img src="images/placeholder3.jpg" alt="Product 3 Placeholder">
+                <h3>Product Name 3</h3>
+                <p>Short description of product 3 goes here.</p>
+                <strong>$0.00</strong>
+            </div>
+        </div>
     </section>
 
     <section>
